--- a/_config.yml
+++ b/_config.yml
@@ -23,23 +23,23 @@ description: >- # used by seo meta and the atom feed
 
 # Fill in the protocol & hostname for your site.
 # e.g. 'https://username.github.io', note that it does not end with a '/'.
-url: ""
+url: "https://b1itzkri3g.github.io"
 
 github:
-  username: github_username # change to your github username
+  username: b1itzkri3g # change to your github username
 
 twitter:
-  username: twitter_username # change to your twitter username
+  username: mrat_khant # change to your twitter username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@domain.com # change to your email address
+  name: Myat Min Khant
+  email: mratmornkhant@gmail.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username # change to your twitter homepage
-    - https://github.com/username # change to your github homepage
+    - https://twitter.com/mrat_khant # change to your twitter homepage
+    - https://github.com/b1itzkri3g # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
